# rm_classifier

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  readthedocs.yaml  readthedocs.yml  stable_environment.yml
docs/: conf.py  index.rst  requirements.txt
docs/_build/doctrees/: index.doctree  tutorial.doctree
docs/_build/doctrees/api/: modules.doctree  rm_classifier.doctree  rm_classifier.helpers.cluster_performance_metrics.doctree  rm_classifier.helpers.doctree  rm_classifier.helpers.high_entropy_subset.doctree  rm_classifier.helpers.statistical_models.doctree  rm_classifier.helpers.tracked_parametric_umap.doctree  rm_classifier.helpers.umap_data_loader.doctree  rm_classifier.helpers.visualization.doctree  rm_classifier.helpers.yumap.doctree  rm_classifier.parametric_umap_classifier.doctree  rm_classifier.performance_metrics.doctree  rm_classifier.prepare_data.doctree  rm_classifier.umap_classifier.doctree  rm_classifier.yumap_classifier.doctree  tutorial.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorial.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/rm_classifier/: parametric_umap_classifier.html  performance_metrics.html  prepare_data.html  umap_classifier.html  yumap_classifier.html
docs/_build/html/_sources/: index.rst.txt  tutorial.rst.txt
docs/_build/html/api/: modules.html  rm_classifier.helpers.cluster_performance_metrics.html  rm_classifier.helpers.high_entropy_subset.html  rm_classifier.helpers.html  rm_classifier.helpers.statistical_models.html  rm_classifier.helpers.tracked_parametric_umap.html  rm_classifier.helpers.umap_data_loader.html  rm_classifier.helpers.visualization.html  rm_classifier.helpers.yumap.html  rm_classifier.html  rm_classifier.parametric_umap_classifier.html  rm_classifier.performance_metrics.html  rm_classifier.prepare_data.html  rm_classifier.umap_classifier.html  rm_classifier.yumap_classifier.html  tutorial.html
docs/api/: rm_classifier.helpers.cluster_performance_metrics.rst  rm_classifier.helpers.high_entropy_subset.rst  rm_classifier.helpers.statistical_models.rst  rm_classifier.helpers.tracked_parametric_umap.rst  rm_classifier.helpers.visualization.rst  rm_classifier.parametric_umap_classifier.rst  rm_classifier.umap_classifier.rst
modules/: cluster_performance_metrics.py  lowram_umap_classifier.py  parametric_umap_classifier.py  performance_metrics.py  prepare_data.py  statistical_models.py  umap_classifier.py  visualization.py  yumap_classifier.py
modules/src/: high_entropy_subset.py  statistical_models.py  tracked_parametric_umap.py  umap_data_loader.py  visualization.py
src/rm_classifier/: __init__.py  parametric_umap_classifier.py  performance_metrics.py  prepare_data.py  umap_classifier.py  yumap_classifier.py
src/rm_classifier.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rm_classifier/helpers/: __init__.py  cluster_performance_metrics.py  high_entropy_subset.py  statistical_models.py  tracked_parametric_umap.py  umap_data_loader.py  visualization.py  yumap.py
tutorials/models/umap_classifier_1/umap_loaded_data/: .nfs00000004000f1a440000b9c1
tutorials/notebooks/: 01_umap_classifier.ipynb  02_parametric_umap_classifier.ipynb  03_yumap_classifier.ipynb  04_large_data_umap_classifier.ipynb  large_data_umap_classifier.ipynb  parametric_umap_classifier.ipynb  umap_classifier.ipynb  umap_model.pkl
tutorials/notebooks/helper_scripts/: random_rm_trace_generator.py
tutorials/yaml_files/: umap_classifier_test.yaml
(+17 files in other folders)
