[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rm_classifier"
version = "0.1.0"
description = "Package including functionalities for data preprocessing, cluster identification, classification, evaluation, and visualization of radio array monitoring data."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Johann Luca Kastner"}
]
maintainers = [
   
]
keywords = ["machine-learning", "radio", "monitoring", "dbscan", "umap"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.10,<3.14"

# Core dependencies 
dependencies = [
    "protobuf>=3.20.0,<5.0.0; python_version<'3.13'",
    "numpy>=1.24.0,<3.0.0",
    "pandas>=2.0.0,<3.0.0", 
    "scipy>=1.10.0,<2.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "tensorflow>=2.15.0,<3.0.0",
    "keras>=3.0.0,<4.0.0",
    "umap-learn>=0.5.0,<1.0.0",
    "numba>=0.61.0,<1.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "bokeh>=3.0.0,<4.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "joblib>=1.3.0,<2.0.0",
    "tqdm>=4.65.0,<5.0.0",
    "memory_profiler>=0.58,<1.0",
    "mkl-service>=2.4.1,<3.0.0",
    "Bottleneck>=1.3.7,<2.0.0",
]

# Optional dependencies (users can install with: pip install package[dev])
[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0,<2.0.0",
    "jupyterlab>=4.0.0,<5.0.0",
    "pytest>=7.0.0,<8.0.0",
    "black>=22.0.0,<25.0.0",
    "flake8>=4.0.0,<8.0.0",
    "mypy>=1.0.0,<2.0.0",
]
tutorials = [
    "jupyter>=1.0.0,<2.0.0",
    "jupyterlab>=4.0.0,<5.0.0",
    "seaborn>=0.12.0,<1.0.0",
]


# Project URLs
[project.urls]
Homepage = "https://github.com/uhgtb/rm_classifier"
Repository = "https://github.com/uhgtb/rm_classifier"
Documentation = "https://github.com/uhgtb/rm_classifier/blob/main/README.md"

# Configure setuptools to find your packages
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

# Black code formatter configuration
[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# MyPy type checker configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]